--- a/pie_chart.html
+++ b/pie_chart.html
@@ -275,7 +275,7 @@ const btn = document.querySelector(".navbtn");
   <br><br>
   <br><br>
   <p>
-    <a class="data" href="https://byjus.com/ias-questions/what-are-the-advantages-and-disadvantages-of-migration/">Data Source</a> | <a class="data" href="https://pib.gov.in/PressReleasePage.aspx?PRID=1833854">References Code</a>
+    <a class="data" href="https://pib.gov.in/PressReleasePage.aspx?PRID=1833854">Data Source</a> | <a class="data" href="https://phppot.com/javascript/chartjs-pie-chart/">References Code</a>
   </p>
 
 </div></div>
