--- a/clustered_stacked_bar_chart.html
+++ b/clustered_stacked_bar_chart.html
@@ -79,6 +79,7 @@
                 
                 <p>Dataset Modify By Group 8:
                     <a class="data" href="https://www.researchgate.net/publication/319659904_Determinants_of_internal_migrant_health_and_the_healthy_migrant_effect_in_South_India_A_mixed_methods_study">Data Resource</a>
+                    | <a class="data" href="https://d3-graph-gallery.com/graph/barplot_stacked_hover.html">References Code</a>
                 </p>
                 
                 <br>
