--- a/bubble_chart.html
+++ b/bubble_chart.html
@@ -84,6 +84,7 @@
                 
                 <p>Dataset Modify By Group 8:
                     <a class="data" href="https://www.migrationpolicy.org/article/indian-immigrants-united-states">Data Resource</a>
+                    | <a class="data" href="https://d3-graph-gallery.com/graph/bubble_tooltip.html">References Code</a>
                 </p>
                 
                 <br>
