--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
           <li><a href="choropleth_map.html">Unemployement</a></li>
           <li><a href="heatmap.html">Wages</a></li>
           <li><a href="sunburst.html">Population</a></li>
-          <li><a href="#">Reason</a></li>
-          <li><a href="#">Disease</a></li>
+          <li><a href="pie_chart.html">Reason</a></li>
+          <li><a href="clustered_stacked_bar_chart.html">Disease</a></li>
           <li><a href="bubble_chart.html">Immigration</a></li>
         </ul>
       </nav>
@@ -19,15 +19,6 @@
         <div class="content">
             <h3>Migration of India</h3>
             <h1>Data Visualisation of the India</h1>
-            <!--<p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt utadipiscing
-                elit sed do eiusmod tempor incididunt Lorem</p>
-
-            
-            <button class='btn-white '>About Us</button>
-            <button class="btn-green">Join Us</button>
-            -->
-
         </div>
 
 
