--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
             <a href="pie_chart.html" class="box">
                 <span><i class="fas fa-tint"></i></span>
-                <h2>Indian Migration Reason</h2>
+                <h2>Indian Migration Reasons</h2>
                 <p>Pie chart</p>
             </a>
 
