--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           <li><a href="choropleth_map.html">Unemployement</a></li>
           <li><a href="heatmap.html">Wages</a></li>
           <li><a href="sunburst.html">Population</a></li>
-          <li><a href="pie_chart.html">Reason</a></li>
+          <li><a href="pie_chart.html">Reasons</a></li>
           <li><a href="clustered_stacked_bar_chart.html">Disease</a></li>
           <li><a href="bubble_chart.html">Immigration</a></li>
         </ul>
@@ -54,56 +54,6 @@
                 </p>
 
             </div>
-            <!--
-            <div class="progressbars">
-
-                <div class="progress-status">
-                    <div class="ninty">
-                        <div class="progress blue">
-                            <div class="progress-left">
-                                <div class="progress-value">90%</div>
-                            </div>
-                            <div class="progress-right">
-                            </div>
-                        </div>
-                        <h4>Save Planets</h4>
-                    </div>
-
-                </div>
-
-
-
-                <div class="progress-status-green">
-                    <div class="eighty">
-                        <div class="progress-green">
-                            <div class="progress-left-green">
-                                <div class="progress-value-green">80%</div>
-                            </div>
-                            <div class="progress-right-green"></div>
-                        </div>
-                        <h4>Save Planets</h4>
-                    </div>
-
-                </div>
-
-
-
-
-
-                <div class="progress-status-golden">
-                    <div class="seventyfive">
-                        <div class="progress-golden">
-                            <div class="progress-left-golden">
-                                <div class="progress-value golden">75%</div>
-                            </div>
-                            <div class="progress-right-golden"></div>
-                        </div>
-                        <h4>Save Planets</h4>
-                    </div>
-                </div>
-
-            </div>
-            -->
         </div>
     </div>
 
@@ -130,38 +80,38 @@
             <a href="choropleth_map.html" class="box" >
                 <span><i class="fab fa-pagelines"></i></span>
                 <h2>Unemployement Rate of 2023 in India States</h2>
-                <p>Choropleth map chart</p>
+                <p>Choropleth Map Chart</p>
             </a>
 
             <a href="heatmap.html" class="box">
                  <span><i class="fa-solid fa-paw"></i></span>
                 <h2>Wages of Various Countries</h2>
-                <p>Heatmap chart</p>
+                <p>Heatmap Chart</p>
             </a>
 
             <a href="sunburst.html" class="box">
                 <span><i class="fas fa-tree"></i></span>
                 <h2>Population of India</h2>
-                <p>Sunburst chart</p>
+                <p>Sunburst Chart</p>
             </a>
 
             <a href="pie_chart.html" class="box">
                 <span><i class="fas fa-tint"></i></span>
                 <h2>Indian Migration Reasons</h2>
-                <p>Pie chart</p>
+                <p>Doughnut Chart</p>
             </a>
 
             <a href="clustered_stacked_bar_chart.html" class="box">
                 <span><i class="fab fa-envira"></i></span>
                 <h2>Disease Leads to Migration</h2>
-                <p>Clustered stacked bar chart</p>
+                <p>Stacked Bar Chart</p>
             </a>
 
 
             <a href="bubble_chart.html" class="box">
                 <span><i class="far fa-snowflake"></i></span>
                 <h2>Immigration From India to Other Countries</h2>
-                <p>Bubble chart</p>
+                <p>Bubble Chart</p>
             </a>
 
 
