--- a/pie_chart.html
+++ b/pie_chart.html
@@ -217,7 +217,7 @@ p {
 
 </style>
 <body>
-<script src="http://d3js.org/d3.v5.min.js"></script>
+<script src="http://d3js.org/d3.v4.min.js"></script>
 
 <div class="back">
 <div class="sidenav">
@@ -245,7 +245,7 @@ const btn = document.querySelector(".navbtn");
 
 <div class ="title">
 <div class="upbox">
-  <h2>~ Doughnut Chart ~</h2>
+  <h2>~ Pie Chart ~</h2>
   <br><br>
   <h1>Indian Migration Reasons</h1>
   <br><br>
