--- a/pie_chart.html
+++ b/pie_chart.html
@@ -217,7 +217,7 @@ p {
 
 </style>
 <body>
-<script src="http://d3js.org/d3.v6.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 
 <div class="back">
 <div class="sidenav">
@@ -274,7 +274,7 @@ const btn = document.querySelector(".navbtn");
   <br><br>
   <br><br>
   <p>
-    <a class="data" href="https://pib.gov.in/PressReleasePage.aspx?PRID=1833854">Data Source</a> | <a class="data" href="https://phppot.com/javascript/chartjs-pie-chart/">References Code</a>
+    <a class="data" href="https://pib.gov.in/PressReleasePage.aspx?PRID=1833854">Data Source</a> | <a class="data" href="https://gist.github.com/chilijung/7e548ce769135e15281c">References Code</a>
   </p>
 
 </div></div>
